# arav-cot-monitorability

./: .env.example  .gitignore  CLAUDE.md  README.md  RUNBOOK_new_models.md  RUNPOD_GPU_SETUP.md  RUNPOD_SETUP.md  RUN_NOTES_olmo_ablation.md  SPEC.md  SPEC_phase2.md  STATUS.md  VLLM_OLMO32B_RUN.md  VLLM_QWEN35_RUN.md  VLLM_S31_RERUN.md  VLLM_S31_RESULTS.md  main.py  pyproject.toml  run_sweep.py
analysis/: 3p1_complex_hints.md  3p1_replication.md
configs/: models.yaml  olmo3_base_chat_template.jinja
interesting_samples/: README.md
patches/: rejudge_llm_models_flag.patch  vllm_olmo3_rope_parameters.patch
results/: family_figure_data.json  family_unfaithfulness_llm.json  gate0_gpt_oss_120b_selfhost.json  gate0_olmo_32b_base.json  gate0_olmo_32b_sft.json  gate1_llm_judge_deltas.json  gate1_rejudge_deltas.json  gate1_sweep_summaries.json  gate1_sweep_summaries_unfiltered.json  gradient_crossover.json  olmo_item_set.json  olmo_posttraining_trajectory.json  olmo_posttraining_trajectory_gpqa.json
scripts/: assemble_family_figure_data.py  augment_trajectory_mmlu.py  autocommit_nemotron.sh  bench_deepseek_providers.py  build_olmo_trajectory.py  calibrate_complex.py  check_hint_decode.py  curate_highlights.py  curate_interesting_samples.py  curate_new_models.py  curate_oneshot_deductive_gptoss.py  decode_necessity_sweep.py  exp_gradient_crossover.py  gate0_gptoss.py  gate0_probe.py  gate0_qwen3_5_selfhost.py  launch_qwen_family_sweep.sh  make_answered_only_heatmap.py  make_clean_figures.py  make_complex_figures.py  make_family_figures.py  make_fig0c.py  make_fig1_hard_hints.py  make_fig5_hard_hints.py  make_figures.py  make_gradient_figures.py  make_olmo_posttraining_figure.py  opus_decode_necessity.py  phase0_deepseek_v4_flash.py  phase0_followups.py  phase0_forcing_check.py  phase0_gemini_3_5_flash.py  (+37 more)
(+461 files in other folders)
