[project]
name = "arav-cot-monitorability"
version = "0.1.0"
description = "Second Look: replication + extension of Emmons et al. 2025 (arXiv 2507.05246) — CoT monitorability."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "inspect-ai>=0.3",
    "openai>=2.40.0",          # required by inspect_ai's OpenRouter (OpenAI-compatible) provider
    "anthropic>=0.40",         # required by inspect_ai's native anthropic provider (opus_4_8_direct)
    "datasets>=2.0",           # GPQA + MMLU-Pro loaders
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "wandb>=0.17",             # experiment tracking — every run logs config + scalars + CoT table
    "openai-harmony>=0.0.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
